--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -4,6 +4,6 @@
    </head>
    <body>
        <h1>Welcome to {{ my_customer_name }} website</h1>
-       <p> This server hostname is {{ inventory_hostname }} and the IP address is {{ ansible_facts['default_ipv4']['address'] }}
+       <p> This server hostname is {{ inventory_hostname }}
    </body>
 </html>
